<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.exercises.ExerciseActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/exercise_card"
        style="@style/AppTheme.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_l"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/exercise_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_m">

            <TextView
                android:id="@+id/exercise_name_title_text_view"
                style="@style/AppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_exercise_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/exercise_name_edit_text"
                style="@style/AppTheme.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:importantForAutofill="no"
                android:hint="@string/hint_exercise_name"
                android:saveEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exercise_name_title_text_view" />

            <Button
                android:id="@+id/ok_button"
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_title_ok"
                android:textColor="@color/white"
                android:backgroundTint="@color/grey_darkish"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exercise_name_edit_text" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_s"
                android:text="@string/button_title_cancel"
                app:layout_constraintStart_toEndOf="@+id/ok_button"
                app:layout_constraintTop_toBottomOf="@+id/exercise_name_edit_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
