<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_m">

    <androidx.cardview.widget.CardView
        android:id="@+id/note_filter_card"
        style="@style/AppTheme.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/note_filter_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_l">

            <TextView
                android:id="@+id/date_range_title_text_view"
                style="@style/AppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_date_range"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/date_range_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_range_title_text_view">

                <include
                    android:id="@+id/date_range"
                    layout="@layout/date_range" />

            </FrameLayout>

            <TextView
                android:id="@+id/bpm_range_title_text_view"
                style="@style/AppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_bpm_range"
                android:layout_marginTop="@dimen/padding_l"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_range_container" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bpm_range_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bpm_range_title_text_view">

                <EditText
                    android:id="@+id/bpm_from_edit_text"
                    style="@style/AppTheme.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:gravity="center"
                    android:hint="@string/hint_min"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="13" />

                <TextView
                    android:id="@+id/bpm_dash_text_view"
                    style="@style/AppTheme.EditableText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" \u2014 "
                    app:layout_constraintStart_toEndOf="@+id/bpm_from_edit_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/bpm_to_edit_text"
                    style="@style/AppTheme.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:gravity="center"
                    android:hint="@string/hint_max"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    app:layout_constraintStart_toEndOf="@+id/bpm_dash_text_view"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="666" />

                <ImageButton
                    android:id="@+id/clear_bpm_range_image_button"
                    style="@style/AppTheme.ImageButton"
                    android:layout_width="@dimen/square_image_button_size"
                    android:layout_height="@dimen/square_image_button_size"
                    android:src="@drawable/ic_all_inclusive"
                    android:contentDescription="@string/desc_clear_note_bpm_range"
                    android:layout_marginStart="@dimen/padding_xl"
                    app:layout_constraintStart_toEndOf="@+id/bpm_to_edit_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <View
                    android:id="@+id/focus_retractor"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <requestFocus />

                </View>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/clear_all_button"
                style="@style/AppTheme.MaterialAlertDialog.OutlinedButton.Unsafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_title_clear_all"
                android:layout_marginTop="@dimen/padding_l"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bpm_range_container" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>
