<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.statistics.TrackingActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/statistics_card"
        style="@style/AppTheme.Card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/padding_l"
        android:layout_marginEnd="@dimen/padding_l"
        android:layout_marginTop="@dimen/padding_l"
        android:layout_marginBottom="@dimen/padding_xl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statistics_card_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_m">

            <TextView
                android:id="@+id/statistics_title_text_view"
                style="@style/AppTheme.HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title_statistics_tracking_progress"/>

            <TextView
                android:id="@+id/date_range_subtitle_text_view"
                style="@style/AppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_m"
                android:text="@string/title_date_range"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statistics_title_text_view" />

            <FrameLayout
                android:id="@+id/date_range_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_range_subtitle_text_view">

                <include
                    android:id="@+id/date_range"
                    layout="@layout/date_range" />

            </FrameLayout>

            <TextView
                android:id="@+id/exercise_subtitle_text_view"
                style="@style/AppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_m"
                android:text="@string/title_tracking_exercise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_range_container" />

            <Spinner
                android:id="@+id/exercise_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_m"
                android:spinnerMode="dropdown"
                android:background="@drawable/spinner_background_selector"
                android:popupBackground="@drawable/spinner_popup_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exercise_subtitle_text_view"
                tools:listitem="@layout/item_exercise_name" />

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/tracking_chart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/padding_m"
                android:layout_marginBottom="@dimen/padding_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exercise_spinner"
                app:layout_constraintBottom_toTopOf="@+id/ok_button" />

            <Button
                android:id="@+id/ok_button"
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_m"
                android:text="@string/button_title_ok"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
